2009-08-14  Kai Tietz  <kai.tietz@onevision.com>

	* intrincs/ilockdec.c, intrincs/ilockdec16.c, intrincs/ilockdec64.c,
	intrincs/ilockinc.c, intrincs/ilockinc16.c, and intrincs/ilockinc64.c:
	Adjust to emulate VC intrinsic function behavior.

2009-08-08  Kai Tietz  <kai.tietz@onevision.com>

	* crt/crt0_w.c (UNICODE): Define it for build.

2009-07-31  Ozkan Sezer  <sezeroz@gmail.com>

	* _fstat64i32.c (stat, fstat): Do not optimize due to strict aliasing
	issues.
	* _fwstat64i32.c(wstat): Likewise.

2009-07-29  Kai Tietz  <kai.tietz@onevision.com>

	* intrincs/__stosd.c: New.
	* intrincs/__stosq.c: New.
	* intrincs/__stosw.c: New.
	* Makefile.am: Add new files above.
	* Makefile.in: Regenerated.

2009-07-29  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/dbgassert.c: Deleted. (made into a macro in winnt.h)

2009-07-29  Kai Tietz  <kai.tietz@onevision.com>

	* intrincs/dbgassert.c: Fix assembly for x86.
	* intrincs/membarrier.c: Likewise.
	* intrincs/__stosb.c: New.
	* Makefile.am: Add __stosb.c
	* Makefile.in: Regenerated.

2009-07-29  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/dbgassert.c, membarrier.c: New. For cases where inlining
	is disabled.
	* Makefile.am: Added the new files to build for w64.
	* Makefile.in: Regenerated.

2009-07-28  Kai Tietz  <kai.tietz@onevision.com>

	* intrincs/currentfiber.c, intrincs/fiberdata.c: Add 32-bit
	compatible code using inline assembler.

2009-07-29  Ozkan Sezer  <sezeroz@gmail.com>

	* intrincs/ilockadd.c, intrincs/ilockadd64.c, intrincs/mul128ex.c,
	intrincs/umul128ex.c: New. For cases where inlining is disabled.
	* Makefile.am: Added the new files to build for w64.
	* Makefile.in: Regenerated.

2009-07-28  Kai Tietz  <kai.tietz@onevision.com>

	PR/2687501
	* stdio/_fstat64i32.c (stat,fstat): Add _imp__<symbol> variable.

2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/wmemchr.c: Added NULL pointer checks.
	* misc/wmemcmp.c: Likewise.

2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>
